2007-03-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: A number of themeing cleanups. Added a statusbar and
	hooked in some connection status and SSL certificate dialog. Show
	geturl progress during history loading.
	(::tkchat::ShowCertificate): It seems some versions of tls/openssl
	use a different delimiter for the certificate records.

2007-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make use of iocpsock for the XMPP link. Added
	no-cache headers on the history requests to combat site caching of
	history files. Fixed loading of tile 0.8.0

2007-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Use the new Tcl compatible TIP index.

2007-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: On linux Button-2 can use used for scrolling.
	removed paste dialog binding (use menu instead).

2007-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Handle hidden rc file on windows and show a message
	if saving options fails for any reason.

2007-02-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add version fetch and display via tooltip.

2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make use of tooltip package to show url links. Load
	TIP index and provide tooltip titles for tip links.
	(::tkchat::ChangeColors): Removed typo.

2007-02-05  Reinhard Max  <max@suse.de>

	* tkchat.tcl (tkchat::PasteDlg): Consider both selections, PRIMARY
	and CLIPBOARD when initializing the paste dialog.
	Added a <Button-3> binding to the main chat window as another
	shortcut for the paste dialog.
	
2007-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support whois information from IRC via the bridge.

2007-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed the googlefight command and added wikipedia
	and wiktionary link commands (/wikid and /wikip)
	Thanks to Joe Decoster.
